--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -2,79 +2,180 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../estilos/style.css">
-    <title>SANSAWEBSITE</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="../estilos/style.css">
+  <title>SANSAWEBSITE</title>
 </head>
 
 <body>
-    <header class="cabeza"> 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand">
-                <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="index.html"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./secciones/productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./secciones/nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./secciones/contacto.html" >Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./secciones/comprar.html" >Comprar</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <h1 class="frase">Diva Regia y Costosa</h1>
-    <section>
-        <h2>Quienes somos?</h2>
-        <p><strong>Somos un equipo de espiritu libre que se animo a tomar el camino
-                emprender este desafio, comenzamos en marzo de 2021 corriendo riesgos,
-                buscando el amor de ustedes hacia nuestros productos.
+  <header class="cabeza">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/comprar.html">Comprar</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-            </strong></p>
-    </section>
+
+  <h1 class="frase">Diva Regia y Costosa</h1>
+  <section class="quienSomos">
+    <h2 class="quienSos">Quienes somos?</h2>
+    <p><strong>Somos Lucas y Jesi manejamos la tienda de manera online,
+        realizamos envíos al todo el País.
+        Nuestro deposito se encuentra en San miguel el cual también puedes pasar a retirar tus compras.
+        No obstante una vez al mes hacemos Showrooms para que puedas pasar y conocernos, disfrutar de descuentos
+        exclusivos y una maravillosa experiencia.
+
+
+      </strong></p>
+
+    <img class="showRoom" src="../imagenes/showroom.jpg" alt="showRoom">
+
+
+  </section>
 </body>
 <footer class="pieSansa">
 
-    <h2 class="tituloFooter">SANSA BS AS</h2>
+  <h2 class="tituloFooter">SANSA BS AS</h2>
+  <nav class="listaFooter">
+    <ul class="seccionFooter">
+      <li><a href="../index.html">HOME</a>
+      </li>
 
-    <nav>
-        <ul>
+      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="../secciones/contacto.html">CONTACTO</a>
+      </li>
 
-            <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+    </ul>
+  </nav>
+  <div class="maps">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+      width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
+
+
+  <div class=""></div>
+</footer>
+
+</html><!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="../estilos/style.css">
+  <title>SANSAWEBSITE</title>
+</head>
+
+<body>
+  <header class="cabeza">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
-            <li><a href="./secciones/contacto.html">CONTACTO</a>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/productos.html">Productos</a>
             </li>
-
-        </ul>
-
-
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/comprar.html">Comprar</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+  </header>
 
-    <div class="maps">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
 
+  <h1 class="frase">Diva Regia y Costosa</h1>
+  <section class="quienSomos">
+    <h2 class="quienSos">Quienes somos?</h2>
+    <p><strong>Somos Lucas y Jesi manejamos la tienda de manera online,
+        realizamos envíos al todo el País.
+        Nuestro deposito se encuentra en San miguel el cual también puedes pasar a retirar tus compras.
+        No obstante una vez al mes hacemos Showrooms para que puedas pasar y conocernos, disfrutar de descuentos
+        exclusivos y una maravillosa experiencia.
+
+
+      </strong></p>
+
+    <img class="showRoom" src="../imagenes/showroom.jpg" alt="showRoom">
+
+
+  </section>
+</body>
+<footer class="pieSansa">
+
+  <h2 class="tituloFooter">SANSA BS AS</h2>
+  <nav class="listaFooter">
+    <ul class="seccionFooter">
+      <li><a href="../index.html">HOME</a>
+      </li>
+
+      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="../secciones/contacto.html">CONTACTO</a>
+      </li>
+
+    </ul>
+  </nav>
+  <div class="maps">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+      width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
+
+
+  <div class=""></div>
 </footer>
 
 </html>
