--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -2,111 +2,129 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../estilos/style.css">
-    <title>SANSAWEBSITE</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="../estilos/style.css">
+  <title>SANSAWEBSITE</title>
 </head>
 
-    <body>
-        <header class="cabeza"> 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand">
-              <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="index.html"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" >Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./comprar.html" >Comprar</a> 
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-        
-
-    <h1 class="frase">Diva Regia y Costosa</h1>
-
-    <section>
-
-        <h2> Vestidos</h2>
-        <div class="galeriaProductos">
-            <img class="vestidoLali" data-aos="fade-right" src="./imgproductos/vestido lali.jpeg" alt="vestidolali">
-            <br>
-
-            <img class="vestidoMandy" data-aos="fade-right" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy">
-            <br>
-
-            <img class="vestidoSara" data-aos="fade-right" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara">
-            <br>
-
+<body>
+  <header class="cabeza">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img class="logoSansa" src="./imgproductos/logo.jpeg" alt="logo" href="../index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/comprar.html">Comprar</a>
+            </li>
+          </ul>
         </div>
-        <h2>Remeras</h2>
-        <img class="musHombreras" data-aos="fade-left" src="./imgproductos/musculosa hombreras.jpeg"
-            alt="musculosahombreras"> <br>
-        <p> <span>$1500.-</span> </p>
-        <img class="remBatik" data-aos="fade-left" src="./imgproductos/remera batik.jpeg" alt="remerabatik"> <br>
-        <p> <span>$1500.-</span> </p>
-        <img class="remKaty" data-aos="fade-left" src="./imgproductos/remera katy.jpeg" alt="remerakaty"> <br>
-        <p> <span>$1500.-</span> </p>
-        <img class="tIbis" data-aos="fade-left" src="./imgproductos/top ibis.jpeg" alt="topibis"> <br>
-        <p> <span>$1500.-</span> </p>
-        <h2>Shorts</h2>
-        <img class="sMarruecos" data-aos="flip-left" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos">
-        <br>
-        <p> <span>$1500.-</span> </p>
-        <img class="shortRustico" data-aos="flip-left" src="./imgproductos/short rustico.jpeg" alt="shortrustico"> <br>
-        <p> <span>$1500.-</span> </p>
-        <img class="shortTokio" data-aos="flip-left" src="./imgproductos/short tokio.jpeg" alt="shorttokio"> <br>
-        <p> <span>$1500.-</span> </p>
-    </section>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 280,
-            duration: 2500
-        });
-    </script>
+      </div>
+    </nav>
+  </header>
+
+
+  <h1 class="frase">Diva Regia y Costosa</h1>
+
+  <section class="productos">
+
+    <h2> Vestidos</h2>
+    <div class="galeriaProductos">
+      <img class="vestidoLali" data-aos="fade-right" src="./imgproductos/vestido lali.jpeg" alt="vestidolali">
+      <br>
+      <p> <span>Vestido Lali</span> </p><br>
+      <p> <span>$1500.-</span> </p>
+      <img class="vestidoMandy" data-aos="fade-right" src="./imgproductos/vestido Mandy.jpeg" alt="vestidomandy">
+      <br>
+      <p> <span>Vestido Mandy</span> </p><br>
+      <p> <span>$1500.-</span> </p>
+      <img class="vestidoSara" data-aos="fade-right" src="./imgproductos/Vestido Sara.jpeg" alt="vestidosara">
+      <br>
+      <p> <span>Vestido Sara</span> </p><br>
+      <p> <span>$1500.-</span> </p>
+    </div>
+    <h2>Remeras</h2><br>
+    <img class="musHombreras" data-aos="fade-left" src="./imgproductos/musculosa hombreras.jpeg"
+      alt="musculosahombreras"> <br>
+    <p> <span>Musculosa Hombreras</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+    <img class="remBatik" data-aos="fade-left" src="./imgproductos/remera batik.jpeg" alt="remerabatik"> <br>
+    <p> <span>Remera Batik</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+    <img class="remKaty" data-aos="fade-left" src="./imgproductos/remera katy.jpeg" alt="remerakaty"> <br>
+    <p> <span>Remera Katy</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+    <img class="tIbis" data-aos="fade-left" src="./imgproductos/top ibis.jpeg" alt="topibis"> <br>
+    <p> <span>Top Ibis</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+    <h2>Shorts</h2><br>
+    <img class="sMarruecos" data-aos="flip-left" src="./imgproductos/short marruecos.jpeg" alt="shortmarruecos">
+    <br>
+    <p> <span>Shor Marruecos</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+    <img class="shortRustico" data-aos="flip-left" src="./imgproductos/short rustico.jpeg" alt="shortrustico"> <br>
+    <p> <span>Short rustico</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+    <img class="shortTokio" data-aos="flip-left" src="./imgproductos/short tokio.jpeg" alt="shorttokio"> <br>
+    <p> <span>Short Tokio</span> </p><br>
+    <p> <span>$1500.-</span> </p>
+  </section>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset: 280,
+      duration: 2500
+    });
+  </script>
 
 </body>
 <footer class="pieSansa">
 
-    <h2 class="tituloFooter">SANSA BS AS</h2>
+  <h2 class="tituloFooter">SANSA BS AS</h2>
+  <nav class="listaFooter">
+    <ul class="seccionFooter">
+      <li><a href="../index.html">HOME</a>
+      </li>
 
-    <nav>
-        <ul>
+      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="../secciones/contacto.html">CONTACTO</a>
+      </li>
 
-            <li><a href="../secciones/nosotros.html">NOSOTROS</a>
-            </li>
-            <li><a href="./secciones/contacto.html">CONTACTO</a>
-            </li>
+    </ul>
+  </nav>
+  <div class="maps">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
+      width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
 
-        </ul>
-    </nav>
-    <div class="maps">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.726490410954!2d-58.7713246581843!3d-34.55398820076252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1643372261027!5m2!1ses-419!2sar"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+  <div class="instagram"></div>
+  <div class="whatsapp"></div>
 </footer>
 
 </html>
