--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -99,22 +99,22 @@
       duration: 2500
     });
   </script>
-
-</body>
-<footer class="pieSansa">
+ <footer class="pieSansa">
 
   <h2 class="tituloFooter">SANSA BS AS</h2>
   <nav class="listaFooter">
     <ul class="seccionFooter">
-      <li><a href="../index.html">HOME</a>
+
+      <li><a href="./secciones/index.html">HOME</a>
+      </li>
+      <li><a href="./secciones/nosotros.html">NOSOTROS</a>
+      </li>
+      <li><a href="./secciones/contacto.html">CONTACTO</a>
       </li>
 
-      <li><a href="../secciones/nosotros.html">NOSOTROS</a>
-      </li>
-      <li><a href="../secciones/contacto.html">CONTACTO</a>
-      </li>
 
     </ul>
+
   </nav>
   <div class="maps">
     <iframe
@@ -123,8 +123,13 @@
   </div>
 
 
-  <div class="instagram"></div>
-  <div class="whatsapp"></div>
+
+
+
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
+
 
 </html>
