--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -46,10 +46,10 @@
   </header>
 
 
-  <h1 class="frase">Diva Regia y Costosa</h1>
+  <h1 class="frase">Diva, Regia y Costosa</h1>
   <section class="quienSomos">
     <h2 class="quienSos">Quienes somos?</h2>
-    <p><strong>Somos Lucas y Jesi manejamos la tienda de manera online,
+    <p class="textoQuien"><strong>Somos Lucas y Jesi manejamos la tienda de manera online,
         realizamos envíos al todo el País.
         Nuestro deposito se encuentra en San miguel el cual también puedes pasar a retirar tus compras.
         No obstante una vez al mes hacemos Showrooms para que puedas pasar y conocernos, disfrutar de descuentos
