--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -47,7 +47,7 @@
   </header>
 
 
-  <h1 class="frase">Diva Regia y Costosa</h1>
+  <h1 class="frase">Diva, Regia y Costosa</h1>
 
   <section class="productos">
 
