--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="./estilos/style.css">
+  <link rel="stylesheet" href="./estilos/estilos.css">
   <title>SANSAWEBSITE</title>
 </head>
 
@@ -44,10 +45,12 @@
       </div>
     </nav>
   </header>
-  <h1 class="frase">Diva Regia y Costosa</h1>
+  <h1 class="frase">Diva, Regia y Costosa</h1>
+  <div class="frase2">
   <h2 class="animate_animated animate__rubberBand">Los Más Vendidos</h2>
+</div>
   <section class="lomasVendido">
-
+    
     <a href="./secciones/productos.html">
       <img class="musculosaHombrera" src="./imagenes/musculosa hombreras.jpeg" alt="musculosahombreras">
     </a>
